Bug 1556568. Fix the first paint telemetry metric. r=mattwoodrow,chutten

Differential Revision: https://phabricator.services.mozilla.com/D37382