toolkit/components/startup/StartupTimeline.cpp
@@ -34,22 +34,25 @@ void XRE_StartupTimelineRecord(int aEvent, TimeStamp aWhen) {
   StartupTimeline::Record((StartupTimeline::Event)aEvent, aWhen);
 }
 
-void StartupTimeline::RecordOnce(Event ev) {
+void StartupTimeline::RecordOnce(Event ev) { RecordOnce(ev, TimeStamp::Now()); }
+
+void StartupTimeline::RecordOnce(Event ev, const TimeStamp& aWhen) {
   if (HasRecord(ev)) {
     return;
   }
 
-  Record(ev);
+  Record(ev, aWhen);
 
   // Record first paint timestamp as a scalar.
-  if (ev == FIRST_PAINT) {
+  if (ev == FIRST_PAINT || ev == FIRST_PAINT2) {
     bool error = false;
     uint32_t firstPaintTime =
-        (uint32_t)(Get(ev) - TimeStamp::ProcessCreation(&error))
-            .ToMilliseconds();
+        (uint32_t)(aWhen - TimeStamp::ProcessCreation(&error)).ToMilliseconds();
     if (!error) {
-      Telemetry::ScalarSet(Telemetry::ScalarID::TIMESTAMPS_FIRST_PAINT,
-                           firstPaintTime);
+      Telemetry::ScalarSet(
+          ev == FIRST_PAINT ? Telemetry::ScalarID::TIMESTAMPS_FIRST_PAINT
+                            : Telemetry::ScalarID::TIMESTAMPS_FIRST_PAINT_TWO,
+          firstPaintTime);
     }
   }
 }
